--- a/examples/private-image-registry/output.yaml
+++ b/examples/private-image-registry/output.yaml
@@ -6,11 +6,11 @@ metadata:
   name: k8smon-alloy-events
   namespace: default
   labels:
-    helm.sh/chart: alloy-events-0.3.1
+    helm.sh/chart: alloy-events-0.3.2
     app.kubernetes.io/name: alloy-events
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: rbac
@@ -22,11 +22,11 @@ metadata:
   name: k8smon-alloy-logs
   namespace: default
   labels:
-    helm.sh/chart: alloy-logs-0.3.1
+    helm.sh/chart: alloy-logs-0.3.2
     app.kubernetes.io/name: alloy-logs
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: rbac
@@ -38,11 +38,11 @@ metadata:
   name: k8smon-alloy
   namespace: default
   labels:
-    helm.sh/chart: alloy-0.3.1
+    helm.sh/chart: alloy-0.3.2
     app.kubernetes.io/name: alloy
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: rbac
@@ -227,6 +227,7 @@ data:
         statements = [
           "set(attributes[\"pod\"], attributes[\"k8s.pod.name\"])",
           "set(attributes[\"namespace\"], attributes[\"k8s.namespace.name\"])",
+          "set(attributes[\"service_name\"], attributes[\"k8s.deployment.name\"])",
           "set(attributes[\"loki.resource.labels\"], \"cluster, namespace, job, pod\")",
           "set(attributes[\"k8s.cluster.name\"], \"private-image-registry-test\") where attributes[\"k8s.cluster.name\"] == nil",
         ]
@@ -48142,11 +48143,11 @@ kind: ClusterRole
 metadata:
   name: k8smon-alloy-events
   labels:
-    helm.sh/chart: alloy-events-0.3.1
+    helm.sh/chart: alloy-events-0.3.2
     app.kubernetes.io/name: alloy-events
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: rbac
@@ -48242,11 +48243,11 @@ kind: ClusterRole
 metadata:
   name: k8smon-alloy-logs
   labels:
-    helm.sh/chart: alloy-logs-0.3.1
+    helm.sh/chart: alloy-logs-0.3.2
     app.kubernetes.io/name: alloy-logs
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: rbac
@@ -48342,11 +48343,11 @@ kind: ClusterRole
 metadata:
   name: k8smon-alloy
   labels:
-    helm.sh/chart: alloy-0.3.1
+    helm.sh/chart: alloy-0.3.2
     app.kubernetes.io/name: alloy
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: rbac
@@ -48684,11 +48685,11 @@ kind: ClusterRoleBinding
 metadata:
   name: k8smon-alloy-events
   labels:
-    helm.sh/chart: alloy-events-0.3.1
+    helm.sh/chart: alloy-events-0.3.2
     app.kubernetes.io/name: alloy-events
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: rbac
@@ -48707,11 +48708,11 @@ kind: ClusterRoleBinding
 metadata:
   name: k8smon-alloy-logs
   labels:
-    helm.sh/chart: alloy-logs-0.3.1
+    helm.sh/chart: alloy-logs-0.3.2
     app.kubernetes.io/name: alloy-logs
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: rbac
@@ -48730,11 +48731,11 @@ kind: ClusterRoleBinding
 metadata:
   name: k8smon-alloy
   labels:
-    helm.sh/chart: alloy-0.3.1
+    helm.sh/chart: alloy-0.3.2
     app.kubernetes.io/name: alloy
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: rbac
@@ -48796,11 +48797,11 @@ kind: Service
 metadata:
   name: k8smon-alloy-events
   labels:
-    helm.sh/chart: alloy-events-0.3.1
+    helm.sh/chart: alloy-events-0.3.2
     app.kubernetes.io/name: alloy-events
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: networking
@@ -48822,11 +48823,11 @@ kind: Service
 metadata:
   name: k8smon-alloy-logs
   labels:
-    helm.sh/chart: alloy-logs-0.3.1
+    helm.sh/chart: alloy-logs-0.3.2
     app.kubernetes.io/name: alloy-logs
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: networking
@@ -48848,11 +48849,11 @@ kind: Service
 metadata:
   name: k8smon-alloy-cluster
   labels:
-    helm.sh/chart: alloy-0.3.1
+    helm.sh/chart: alloy-0.3.2
     app.kubernetes.io/name: alloy
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: networking
@@ -48912,11 +48913,11 @@ kind: Service
 metadata:
   name: k8smon-alloy
   labels:
-    helm.sh/chart: alloy-0.3.1
+    helm.sh/chart: alloy-0.3.2
     app.kubernetes.io/name: alloy
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: networking
@@ -49045,11 +49046,11 @@ kind: Service
 metadata:
   name: k8smon-grafana-agent
   labels:
-    helm.sh/chart: alloy-0.3.1
+    helm.sh/chart: alloy-0.3.2
     app.kubernetes.io/name: alloy
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
 spec:
@@ -49102,11 +49103,11 @@ kind: DaemonSet
 metadata:
   name: k8smon-alloy-logs
   labels:
-    helm.sh/chart: alloy-logs-0.3.1
+    helm.sh/chart: alloy-logs-0.3.2
     app.kubernetes.io/name: alloy-logs
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
 spec:
@@ -49128,7 +49129,7 @@ spec:
         - name: my-registry-creds
       containers:
         - name: alloy
-          image: my.registry.com/grafana/alloy:v1.1.0
+          image: my.registry.com/grafana/alloy:v1.1.1
           imagePullPolicy: IfNotPresent
           args:
             - run
@@ -49317,11 +49318,11 @@ kind: Deployment
 metadata:
   name: k8smon-alloy-events
   labels:
-    helm.sh/chart: alloy-events-0.3.1
+    helm.sh/chart: alloy-events-0.3.2
     app.kubernetes.io/name: alloy-events
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
 spec:
@@ -49344,7 +49345,7 @@ spec:
         - name: my-registry-creds
       containers:
         - name: alloy
-          image: my.registry.com/grafana/alloy:v1.1.0
+          image: my.registry.com/grafana/alloy:v1.1.1
           imagePullPolicy: IfNotPresent
           args:
             - run
@@ -49603,11 +49604,11 @@ kind: StatefulSet
 metadata:
   name: k8smon-alloy
   labels:
-    helm.sh/chart: alloy-0.3.1
+    helm.sh/chart: alloy-0.3.2
     app.kubernetes.io/name: alloy
     app.kubernetes.io/instance: k8smon
     
-    app.kubernetes.io/version: "v1.1.0"
+    app.kubernetes.io/version: "v1.1.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
 spec:
@@ -49632,7 +49633,7 @@ spec:
         - name: my-registry-creds
       containers:
         - name: alloy
-          image: my.registry.com/grafana/alloy:v1.1.0
+          image: my.registry.com/grafana/alloy:v1.1.1
           imagePullPolicy: IfNotPresent
           args:
             - run
@@ -49857,6 +49858,7 @@ data:
         statements = [
           "set(attributes[\"pod\"], attributes[\"k8s.pod.name\"])",
           "set(attributes[\"namespace\"], attributes[\"k8s.namespace.name\"])",
+          "set(attributes[\"service_name\"], attributes[\"k8s.deployment.name\"])",
           "set(attributes[\"loki.resource.labels\"], \"cluster, namespace, job, pod\")",
           "set(attributes[\"k8s.cluster.name\"], \"private-image-registry-test\") where attributes[\"k8s.cluster.name\"] == nil",
         ]
@@ -50867,7 +50869,7 @@ spec:
         kubernetes.io/os: linux
   containers:
     - name: alloy
-      image: "my.registry.com/grafana/alloy:v1.1.0"
+      image: "my.registry.com/grafana/alloy:v1.1.1"
       command:
       - bash
       - -c
