--- a/examples/service-integrations/output.yaml
+++ b/examples/service-integrations/output.yaml
@@ -52,7 +52,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:    
-    helm.sh/chart: kube-state-metrics-5.19.0
+    helm.sh/chart: kube-state-metrics-5.20.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: kube-state-metrics
@@ -223,6 +223,7 @@ data:
         statements = [
           "set(attributes[\"pod\"], attributes[\"k8s.pod.name\"])",
           "set(attributes[\"namespace\"], attributes[\"k8s.namespace.name\"])",
+          "set(attributes[\"service_name\"], attributes[\"k8s.deployment.name\"])",
           "set(attributes[\"loki.resource.labels\"], \"cluster, namespace, job, pod\")",
           "set(attributes[\"k8s.cluster.name\"], \"service-integrations-test\") where attributes[\"k8s.cluster.name\"] == nil",
         ]
@@ -48470,7 +48471,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:    
-    helm.sh/chart: kube-state-metrics-5.19.0
+    helm.sh/chart: kube-state-metrics-5.20.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: kube-state-metrics
@@ -48781,7 +48782,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:    
-    helm.sh/chart: kube-state-metrics-5.19.0
+    helm.sh/chart: kube-state-metrics-5.20.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: kube-state-metrics
@@ -49000,7 +49001,7 @@ metadata:
   name: k8smon-kube-state-metrics
   namespace: default
   labels:    
-    helm.sh/chart: kube-state-metrics-5.19.0
+    helm.sh/chart: kube-state-metrics-5.20.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: kube-state-metrics
@@ -49423,7 +49424,7 @@ metadata:
   name: k8smon-kube-state-metrics
   namespace: default
   labels:    
-    helm.sh/chart: kube-state-metrics-5.19.0
+    helm.sh/chart: kube-state-metrics-5.20.0
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: metrics
     app.kubernetes.io/part-of: kube-state-metrics
@@ -49442,7 +49443,7 @@ spec:
   template:
     metadata:
       labels:        
-        helm.sh/chart: kube-state-metrics-5.19.0
+        helm.sh/chart: kube-state-metrics-5.20.0
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/component: metrics
         app.kubernetes.io/part-of: kube-state-metrics
@@ -49874,6 +49875,7 @@ data:
         statements = [
           "set(attributes[\"pod\"], attributes[\"k8s.pod.name\"])",
           "set(attributes[\"namespace\"], attributes[\"k8s.namespace.name\"])",
+          "set(attributes[\"service_name\"], attributes[\"k8s.deployment.name\"])",
           "set(attributes[\"loki.resource.labels\"], \"cluster, namespace, job, pod\")",
           "set(attributes[\"k8s.cluster.name\"], \"service-integrations-test\") where attributes[\"k8s.cluster.name\"] == nil",
         ]
